@@ -11,7 +11,6 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
@@ -28,12 +27,12 @@ public class HomeCommand implements CommandExecutor, TabCompleter {
     @Override
     public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
         if (!(sender instanceof Player)) {
-            Message.sendConsole("must_be_player");
+            Message.sendMessage(sender,"must_be_player");
             return true;
         }
 
         if (!(sender.hasPermission("lyttleessentials.home"))) {
-            Message.sendPlayer((Player) sender, "no_permission");
+            Message.sendMessage(sender, "no_permission");
             return true;
         }
 
@@ -41,20 +40,20 @@ public class HomeCommand implements CommandExecutor, TabCompleter {
 
         if (Objects.equals(label, "sethome")) {
             if (!(sender.hasPermission("lyttleessentials.home.set"))) {
-                Message.sendPlayer((Player) sender, "no_permission");
+                Message.sendMessage(sender, "no_permission");
                 return true;
             }
 
             if (args.length == 0) {
                 Location location = player.getLocation();
                 plugin.config.homes.set(player.getUniqueId().toString(), location);
-                Message.sendPlayer(player, "sethome_success");
+                Message.sendMessage(player, "sethome_success");
                 return true;
             }
 
             if (args.length == 1) {
                 if (!player.hasPermission("lyttleessentials.home.set.other")) {
-                    Message.sendPlayer(player, "no_permission");
+                    Message.sendMessage(player, "no_permission");
                     return true;
                 }
 
@@ -62,7 +61,7 @@ public class HomeCommand implements CommandExecutor, TabCompleter {
 
                 if (target == null) {
                     String[][] replacements = {{"%player%", args[0]}};
-                    Message.sendPlayer(player, "player_not_found", replacements);
+                    Message.sendMessage(player, "player_not_found", replacements);
                     return true;
                 }
 
@@ -70,47 +69,47 @@ public class HomeCommand implements CommandExecutor, TabCompleter {
                 Location location = player.getLocation();
                 plugin.config.homes.set(player.getUniqueId().toString(), location);
                 String[][] replacements = {{"<PLAYER>", homeName}};
-                Message.sendPlayer(player, "sethome_other_success", replacements);
+                Message.sendMessage(player, "sethome_other_success", replacements);
                 return true;
             }
 
-            Message.sendPlayer(player, "sethome_usage");
+            Message.sendMessage(player, "sethome_usage");
             return true;
         }
 
         if (Objects.equals(label, "delhome")) {
             if (!(sender.hasPermission("lyttleessentials.home.del"))) {
-                Message.sendPlayer((Player) sender, "no_permission");
+                Message.sendMessage(sender, "no_permission");
                 return true;
             }
 
             if (args.length == 0) {
                 plugin.config.homes.set(player.getUniqueId().toString(), null);
-                Message.sendPlayer(player, "delhome_success");
+                Message.sendMessage(player, "delhome_success");
                 return true;
             }
 
             if (args.length == 1) {
                 if (!player.hasPermission("lyttleessentials.home.del.other")) {
-                    Message.sendPlayer(player, "no_permission");
+                    Message.sendMessage(player, "no_permission");
                     return true;
                 }
 
                 Player target = Bukkit.getPlayer(args[0]);
 
                 if (target == null) {
-                    Message.sendPlayer(player, "player_not_found");
+                    Message.sendMessage(player, "player_not_found");
                     return true;
                 }
 
                 String homeName = args[0];
                 plugin.config.homes.set(player.getName(), null);
                 String[][] replacements = {{"<PLAYER>", homeName}};
-                Message.sendPlayer(player, "delhome_other_success", replacements);
+                Message.sendMessage(player, "delhome_other_success", replacements);
                 return true;
             }
 
-            Message.sendPlayer(player, "delhome_usage");
+            Message.sendMessage(player, "delhome_usage");
             return true;
         }
 
@@ -118,24 +117,24 @@ public class HomeCommand implements CommandExecutor, TabCompleter {
             if (args.length == 0) {
                 Location location = (Location) plugin.config.homes.get(player.getUniqueId().toString());
                 if (location == null) {
-                    Message.sendPlayer(player, "home_not_set");
+                    Message.sendMessage(player, "home_not_set");
                     return true;
                 }
 
 
                 Bill bill = this.plugin.invoice.teleportToHome(player);
                 if (bill.total == -1) {
-                    Message.sendPlayer(player, "tokens_missing");
+                    Message.sendMessage(player, "tokens_missing");
                     return true;
                 }
 
                 player.teleport(location);
                 String[][] replacements = {{"<PRICE>", String.valueOf(bill.total)}};
-                Message.sendPlayer(player, "home_success", replacements);
+                Message.sendMessage(player, "home_success", replacements);
                 return true;
             }
 
-            Message.sendPlayer(player, "home_usage");
+            Message.sendMessage(player, "home_usage");
             return true;
         }
 
@@ -144,6 +143,6 @@ public class HomeCommand implements CommandExecutor, TabCompleter {
 
     @Override
     public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] arguments) {
-        return Arrays.asList();
+        return List.of();
     }
 }
